--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   tinycolor: ^1.0.2
   http: ^0.12.2
   datetime_picker_formfield: ^2.0.0
+  image_picker: ^0.6.6+4
 
 dev_dependencies:
   flutter_test:
