--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   http: ^0.12.2
   datetime_picker_formfield: ^2.0.0
   image_picker: ^0.6.6+4
+  signature: ^3.2.0
+  image_gallery_saver: '^1.6.0'
+  permission_handler: ^5.0.1+1
 
 dev_dependencies:
   flutter_test:
@@ -94,6 +97,13 @@ flutter:
         - asset: assets/fonts/segoeuib.ttf
         - asset: assets/fonts/seguili.ttf
           style: italic
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Regular.ttf
+        - asset: assets/fonts/Montserrat-Italic.ttf
+          style: italic
+        - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 700
           
 flutter_icons:
   ios: true
