--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   datetime_picker_formfield: ^2.0.0
   image_picker: ^0.6.6+4
   signature: ^3.2.0
+  argon_buttons_flutter: ^1.0.6
 
 dev_dependencies:
   flutter_test:
