--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   image_picker: ^0.6.6+4
   signature: ^3.2.0
   argon_buttons_flutter: ^1.0.6
+  lazy_load_scrollview: ^1.3.0
 
 dev_dependencies:
   flutter_test:
