--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   signature: ^3.2.0
   argon_buttons_flutter: ^1.0.6
   in_app_update: ^1.1.15
+  path_provider: ^1.6.28
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
