--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   in_app_update: ^1.1.15
   path_provider: ^1.6.28
   url_launcher: ^5.7.10
+  fl_chart: ^0.12.3
 
 dev_dependencies:
   flutter_test:
