--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-#version: 1.1.0+8
-version: 1.2.0+9
+#version: 1.2.0+9
+version: 1.2.1+10
 
 environment:
   sdk: ">=2.0.0 <3.0.0"
@@ -43,7 +43,9 @@ dependencies:
   fl_chart: ^0.12.3
   syncfusion_flutter_charts: ^18.4.49
   flutter_screenutil: ^4.0.4
-
+  firebase_messaging: ^7.0.3
+  sqflite: ^1.3.2+4
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
