--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         <uses-permission android:name="android.permission.CAMERA" />
         <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+        <!-- <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/> -->
+
+        <!-- Always include this permission -->
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+        <!-- Include only if your app benefits from precise location access. -->
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+        
 
          
     <application
