--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-#version: 1.2.9+18
-version: 1.3.0+19
+#version: 1.3.1+22
+version: 1.3.3+23
 
 environment:
   #sdk: ">=2.0.0 <3.0.0"
@@ -40,7 +40,11 @@ dependencies:
   http: ^0.13.5
   date_field: ^2.1.3
   time_pickerr: ^1.0.6
+  camera: ^0.9.2
   image_picker: ^0.8.4
+  screenshot: ^1.3.0
+  geocoding: ^2.0.5
+  location: ^4.4.0
   signature: ^4.1.1
   argon_buttons_flutter: ^1.1.0
   in_app_update: ^3.0.0
@@ -59,6 +63,8 @@ dependencies:
   sqflite: ^2.0.2
   table_calendar: ^3.0.0
   intl: ^0.17.0
+  webview_flutter: ^2.0.13
+  lottie: ^1.2.2
   
 dev_dependencies:
   flutter_test:
@@ -87,6 +93,7 @@ flutter:
   assets:
     - assets/launcher/
     - assets/images/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
