--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_screenutil: ^5.5.2
   firebase_messaging: ^11.2.7
   firebase_core: ^1.12.0
+  # firebase_core: ^1.13.1
   android_path_provider: ^0.3.0
   flutter_downloader: ^1.7.4
   permission_handler: ^9.0.2
@@ -63,8 +64,10 @@ dependencies:
   sqflite: ^2.0.2
   table_calendar: ^3.0.0
   intl: ^0.17.0
-  webview_flutter: ^2.0.13
+  # webview_flutter: ^2.0.13
+  webview_flutter: ^3.0.0
   lottie: ^1.2.2
+  flutter_html: ^3.0.0-alpha.3
   
 dev_dependencies:
   flutter_test:
