--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         <uses-permission android:name="android.permission.INTERNET" />
         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
         <uses-permission android:name="android.permission.CAMERA" />
-        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
         <!-- <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/> -->
@@ -17,12 +17,19 @@
         <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
         <!-- Include only if your app benefits from precise location access. -->
         <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+        
+        <!-- <uses-feature  android:name="android.hardware.camera" android:required="true"/> -->
 
+        <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" /> <!-- For Images-->
+        <!-- <uses-permission android:name="android.permission.READ_MEDIA_VIDEOS" /> 
+        <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" /> --> 
+        <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
          
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="My Leinz"
         android:requestLegacyExternalStorage="true"
+        android:networkSecurityConfig="@xml/network_config"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
