--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-#version: 1.3.7+28
-version: 1.3.8+29
+#version: 1.3.8+29
+version: 1.3.8+30
 
 environment:
   #sdk: ">=2.0.0 <3.0.0"
@@ -40,7 +40,8 @@ dependencies:
   http: ^0.13.5
   date_field: ^2.1.3
   time_pickerr: ^1.0.6
-  camera: ^0.9.2
+  device_info_plus: ^3.2.0
+  camera: ^0.9.2   
   image_picker: ^0.8.4
   screenshot: ^1.3.0
   geocoding: ^2.0.5
@@ -75,6 +76,11 @@ dev_dependencies:
 
 dependency_overrides:
   firebase_messaging_platform_interface: 3.1.6
+  camera_android:
+    git:
+      url: https://github.com/elmar001/plugins.git
+      path: packages/camera/camera_android
+      ref: 5172b44088a4082ff0899594614c5380457d341b
 
 
 # For information on the generic Dart part of this file, see the
