- Customer baru langsung redirect ke form buat kontrak - Handle minor bugs tanggal lahir customer baru - Handle minor bugs pembaruan kontrak customer lama tidak tampil nomor akun

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,6 +80,11 @@ android {
             //signingConfig signingConfigs.debug
             buildConfigField 'boolean', 'UPDATE_ENABLED', 'true'
             signingConfig signingConfigs.release
+
+            minifyEnabled true
+            useProguard true
+
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
