--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-#version: 1.3.9+31
-version: 1.4.0+32
+#version: 1.4.0+32
+version: 1.4.1+33
 
 environment:
   #sdk: ">=2.0.0 <3.0.0"
@@ -69,6 +69,7 @@ dependencies:
   webview_flutter: ^3.0.0
   lottie: ^1.2.2
   flutter_html: ^3.0.0-alpha.3
+  flutter_image_compress: ^1.1.3
   
 dev_dependencies:
   flutter_test:
