--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,8 +53,8 @@ android {
         multiDexEnabled true
         // minSdkVersion 19
         minSdkVersion 21
-        // targetSdkVersion 31
-        targetSdkVersion 33
+        // targetSdkVersion 33
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -96,7 +96,7 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.material:material:1.1.0'
-    implementation 'com.google.android.play:core:1.10.3'
+    // implementation 'com.google.android.play:core:1.10.3'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
     testImplementation 'junit:junit:4.12'
