--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   lottie: ^1.2.2
   flutter_html: ^3.0.0-alpha.3
   flutter_image_compress: ^1.1.3
+  get: ^4.6.1
+  dotted_border: ^2.1.0
   
 dev_dependencies:
   flutter_test:
