--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,9 +24,11 @@
         <!-- <uses-permission android:name="android.permission.READ_MEDIA_VIDEOS" /> 
         <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" /> --> 
         <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+        <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
          
+    <!-- android:name="io.flutter.app.FlutterApplication"-->     
     <application
-        android:name="io.flutter.app.FlutterApplication"
+        android:name="${applicationName}"
         android:label="My Leinz"
         android:requestLegacyExternalStorage="true"
         android:networkSecurityConfig="@xml/network_config"
