--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,24 +1,28 @@
 buildscript {
-    // ext.kotlin_version = '1.3.50'
-    // ext.kotlin_version = '1.4.0'
-    ext.kotlin_version = '1.6.10'
+    // ext.kotlin_version = '1.6.10'
+    // ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
-        jcenter()
+        // jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        // classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath 'com.android.tools.build:gradle:4.2.0'
+        // classpath 'com.android.tools.build:gradle:4.2.0'
+        // classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath 'com.android.tools.build:gradle:7.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.4'
+        // classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        // jcenter()
     }
 }
 
@@ -30,6 +34,6 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-task clean(type: Delete) {
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
