--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,15 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-#version: 1.4.0+32
-version: 1.4.1+33
+#version: 1.4.3+35
+version: 1.4.4+36
 
 environment:
   #sdk: ">=2.0.0 <3.0.0"
 
   #Null Safety sdk
-  sdk: ">=2.12.0 <3.0.0"
+  # sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
   # sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
@@ -27,50 +28,49 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  # cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.6
   introduction_screen: ^3.0.1
-  # flutter_launcher_icons: ^0.7.0
   flutter_launcher_icons: ^0.10.0
-  shared_preferences: ^2.0.15
+  shared_preferences: ^2.2.1
   # change_app_package_name: ^0.1.2
-  # curved_navigation_bar: ^0.3.2
-  # google_fonts: ^1.1.0
-  fl_toast: ^3.1.0
-  tinycolor: ^1.0.2
+  fl_toast: ^3.2.0
+  # tinycolor: ^1.0.2
   http: ^0.13.5
-  date_field: ^2.1.3
+  date_field: ^3.0.5
   time_pickerr: ^1.0.6
-  device_info_plus: ^3.2.0
-  camera: ^0.9.2   
+  device_info_plus: ^8.2.2
+  camera: ^0.10.5+9
   image_picker: ^0.8.4
-  screenshot: ^1.3.0
-  geocoding: ^2.0.5
-  location: ^4.4.0
+  screenshot: ^2.1.0
+  exif: ^3.3.0
+  # geocoding: ^2.0.5
+  geocoding: ^2.2.2
+  location: ^5.0.0
   signature: ^4.1.1
-  argon_buttons_flutter: ^1.1.0
-  in_app_update: ^3.0.0
-  path_provider: ^2.0.2
+  easy_loading_button: ^0.3.2
+  # in_app_update: ^3.0.0
+  in_app_update: ^4.2.3
+  path_provider: ^2.0.15
   plugin_platform_interface: ^2.0.1
   path_provider_platform_interface: ^2.0.0
   # url_launcher: ^6.1.5
-  syncfusion_flutter_charts: ^19.1.54
-  flutter_screenutil: ^5.5.2
-  firebase_messaging: ^11.2.7
-  firebase_core: ^1.12.0
-  # firebase_core: ^1.13.1
-  android_path_provider: ^0.3.0
-  flutter_downloader: ^1.7.4
+  # syncfusion_flutter_charts: ^19.1.54
+  # syncfusion_flutter_charts: ^26.1.42
+  flutter_screenutil: ^5.9.3
+  firebase_messaging : ^14.6.0
+  firebase_core: ^2.12.0
+  flutter_downloader: ^1.10.5
   permission_handler: ^9.0.2
-  zoom_pinch_overlay: ^1.2.0
+  zoom_pinch_overlay: ^1.4.3
   sqflite: ^2.0.2
   table_calendar: ^3.0.0
-  intl: ^0.17.0
-  # webview_flutter: ^2.0.13
+  intl: ^0.18.1
   webview_flutter: ^3.0.0
   lottie: ^1.2.2
   flutter_html: ^3.0.0-alpha.3
   flutter_image_compress: ^1.1.3
-  get: ^4.6.1
+  get: ^4.6.5
   dotted_border: ^2.1.0
   
 dev_dependencies:
@@ -78,12 +78,14 @@ dev_dependencies:
     sdk: flutter
 
 dependency_overrides:
-  firebase_messaging_platform_interface: 3.1.6
-  camera_android:
-    git:
-      url: https://github.com/elmar001/plugins.git
-      path: packages/camera/camera_android
-      ref: 5172b44088a4082ff0899594614c5380457d341b
+  # firebase_messaging_platform_interface: 4.2.16
+  firebase_messaging_platform_interface: 4.5.0
+  firebase_core_platform_interface: 4.7.0
+  # camera_android:
+  #   git:
+  #     url: https://github.com/elmar001/plugins.git
+  #     path: packages/camera/camera_android
+  #     ref: 5172b44088a4082ff0899594614c5380457d341b
 
 
 # For information on the generic Dart part of this file, see the
@@ -156,3 +158,6 @@ flutter_icons:
   image_path_android: "assets/launcher/newicon.png"
   adaptive_icon_background: "assets/launcher/background.png"
   adaptive_icon_foreground: "assets/launcher/foreground.png"
+
+module: 
+  androidX: true
