--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-#version: 1.4.6+40
-version: 1.4.7+41
+#version: 1.5.1+46
+version: 1.5.2+47
 
 environment:
   #sdk: ">=2.0.0 <3.0.0"
@@ -74,6 +74,9 @@ dependencies:
   get: ^4.6.5
   dotted_border: ^2.1.0
   social_sharing_plus: ^1.2.3
+  calendar_date_picker2: ^1.1.7
+  flutter_local_notifications: ^17.2.4
+  # android_alarm_manager_plus: ^4.0.4
   
 dev_dependencies:
   flutter_test:
